--- a/css/main.css
+++ b/css/main.css
@@ -1,125 +1,71 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
 body {
-    line-height: 1;
+    background-image:url("../images/leeds-at-night.jpg");
+    background-size:1920px;
+    background-position:center top;
+    background-repeat:no-repeat;
+    text-align:center;
 }
-ol, ul {
-    list-style: none;
-}
-blockquote, q {
-    quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after{
-    content: '';
-    content: none;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-
-/* Setting starts here */
 
 h1, h2 {
-    text-align:center;
-    font-family:"Helvetica";
+    display:block;
+    font-family:"Maven Pro", sans-serif;
+    color: #400;
 }
 
 h1 {
-    font-size:28pt;
-    font-weight:900;
+    font-size:54pt;
+    margin:16px;
+    text-transform:uppercase;
+}
+
+@media (max-width: 600px) {
+    h1 {
+	font-size:36pt;
+    }
 }
 
 h2 {
-    font-size:20pt;
-    font-weight:400;
+    font-size:28pt;
+    margin:16px;
 }
 
 nav {
-    display:block;
-    background-color:orange;
-    
     font-family:"Helvetica";
     font-weight:600;
     font-size:12pt;
     text-decoration:none;
-
-    width:220px;
-}
-
-wrapper {
-    width:960px;
-    border:1px solid;
 }
 
 nav ul {
-    list-style:none;
-    border-top:1px solid;
+    display:inline-block;
+    list-style-type:none;
+    overflow:hidden;
 }
 
 nav li {
-    border-left:1px solid;
-    border-right:1px solid;
-    border-bottom:1px solid;
+    float:left
 }
 
 nav a {
     display:block;
     text-decoration:none;
     color:black;
-    padding:4px 24px;
+    padding:8px 8px;
+    background-color:#ccc;
+    border:1px solid;
+    width:140px;
+    text-align:center;
 }
 
 header {
-    display:relative
 }
 
 section {
-    display:block;
-}
-
-#left-column {
-    float:left;
-    width:220px;
-}
-
-#left-column > img {
-    display:block;
-}
-
-#right-column-right {
-    float:left;
-    width:730px;
+    display:inline-block;
+    max-width:900px;
+    background:#ffe8d0;
+    height:100%;
+    padding:32px;
+    margin:8px;
+    text-align:left;
 }
