--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,7 @@ section {
     overflow:hidden;
 }
 
-@media (max-width: 960px) {
+@media (max-width: 960px) or (max-device-width: 960px) {
     section {
 	margin:0px;
     }
