--- a/css/main.css
+++ b/css/main.css
@@ -101,13 +101,7 @@ section {
     overflow:hidden;
 }
 
-@media handheld {
-    section {
-	margin:0px;
-    }
-}
-
-@media (max-width: 960px) {
+@media (max-device-width: 960px) {
     section {
 	margin:0px;
     }
