--- a/css/main.css
+++ b/css/main.css
@@ -94,19 +94,13 @@ header {
 section {
     background:#fff0e0;
     padding:16px 32px;
-    margin:8px;
+    margin:8px 0px;
     text-align:justify;
     font-family:sans-serif;
     line-height:1.2em;
     overflow:hidden;
 }
 
-@media (max-device-width: 960px) {
-    section {
-	margin:0px;
-    }
-}
-    
 section > img {
     display:block;
     max-width:100%;
@@ -122,13 +116,17 @@ p {
 
 #footer {
     color:white;
-    font-family:Helvetica,Arial,sans-serif;
+    font-family:Arial,sans-serif;
     font-size:12pt;
 }
 
 #footer > * {
     float:left;
-    width:50%;
+    width:33.33%;
+}
+
+#last-modified {
+    font-weight:700;
 }
 
 #footer a {
