--- a/css/main.css
+++ b/css/main.css
@@ -49,13 +49,14 @@ nav li {
     float:left;
     margin-left:-1px;
     margin-top:-1px;
+    width:160px;
 }
 
 nav a {
     display:block;
     text-decoration:none;
     color:black;
-    padding:8px 16px;
+    padding:8px 8px;
     background-color:#ccc;
     border:1px solid;
     text-align:center;
