--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,8 @@ body {
 
 h1, h2 {
     display:block;
-    font-family:"Maven Pro", sans-serif;
+    font-family:"Maven Pro",sans-serif;
+    font-weight:900;
     color: #400;
 }
 
